--- a/package.json
+++ b/package.json
@@ -2,23 +2,36 @@
   "name": "@mop/dzdownloadernode",
   "version": "1.0.0",
   "description": "A library to download deezer tracks",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "tslint -p tsconfig.json",
+    "build" : "tsc",
+    "prepare" : "npm run build",
+    "prepublishOnly" : "npm run lint",
+    "preversion" : "npm run lint",
+    "version" : "npm run format && git add -A src",
+    "postversion" : "git push && git push --tags"
   },
   "keywords": [
     "deezer"
   ],
   "author": "Malaury DUTOUR",
   "license": "ISC",
+  "files": ["lib/**/*"],
   "devDependencies": {
+    "prettier": "^2.2.1",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.1.2"
   },
   "dependencies": {
-    "@types/bent": "^7.3.2",
     "@types/node": "^14.14.10",
-    "axios": "^0.21.0",
-    "bent": "^7.3.12",
-    "utf8": "^3.0.0"
+    "axios": "^0.21.0"
+  },
+  "directories": {
+    "lib": "lib"
   }
 }
