--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mop/dzdownloadernode",
+  "name": "@mopjs/dzdownloadernode",
   "version": "1.0.0",
   "description": "A library to download deezer tracks",
   "main": "lib/index.js",
