--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   },
   "dependencies": {
     "@types/node": "^14.14.10",
-    "axios": "^0.21.0"
+    "axios": "^0.21.0",
+    "block-stream": "0.0.9"
   },
   "directories": {
     "lib": "lib"
