--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@types/node": "^14.14.10",
     "axios": "^0.21.0",
+    "axios-retry": "^3.1.9",
     "block-stream": "0.0.9"
   },
   "directories": {
